# iceberg-tinybird

./: .gitignore  README.md  run_github_events_copy_daily.sh
.github/workflows/: hourly_data_ingest.yml  tinybird-cd.yml  tinybird-ci.yml
gharchive-to-iceberg/: .env.example  ingest_missing_hours.sh  load_daily.sh  pyproject.toml
gharchive-to-iceberg/src/: github_archive_to_iceberg.py
iceberg-kafka/: README.md
iceberg-kafka/connections/: redpanda.connection
iceberg-kafka/copies/: backfill_events.pipe
iceberg-kafka/datasources/: event_metrics_mv.datasource  redpanda_events.datasource
iceberg-kafka/endpoints/: events_stats.pipe
iceberg-kafka/fixtures/: iceberg_export_data.ndjson  iceberg_export_data.sql  iceberg_export_data_copy.ndjson  iceberg_export_data_copy.sql
iceberg-kafka/materializations/: events_metrics.pipe
tinybird/: README.md
tinybird/copies/: cp_github_events_historic.pipe  cp_github_events_rt.pipe  github_events_copy.pipe
tinybird/datasources/: github_events.datasource  github_events_by_day.datasource  github_events_historic.datasource  github_events_rt.datasource
tinybird/endpoints/: last_github_event_date.pipe  test.pipe  top_repos.pipe  top_starred_repos.pipe
tinybird/materializations/: mv_github_events_by_day.pipe  mv_github_events_by_day_rt.pipe
